tests/fixtures/invalid/bool_rshift_list.py
# Cannot right shift Bool and List[int]
x: bool = True >> [1, 2, 3]
